# bigfoot-site

./: .gitignore  builddb.py  database.db  pyproject.toml
backend/: Dockerfile  main.py
database/: create.py  database.db  functions.py  location_data.txt  models.py  read.py  scrapping.py  setup.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Stylesheet.js  sighting.js
frontend/src/components/: Country.js  CountyList.js  Home.js  Sighting.js  StateDetails.js  StateList.js
